--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,7 +5,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>ui5-template</title>
 		<script id="sap-ui-bootstrap"
-			src="../../resources/sap-ui-core.js"
+			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-resourceroots='{"ui5-template.ui5-template": "./"}'
 			data-sap-ui-compatVersion="edge"
